--- a/templates/pageFlow.njk
+++ b/templates/pageFlow.njk
@@ -1,6 +1,6 @@
 <ol class="page-flow--stages">
 
-    {% for stage in pageFlow.stages %}
+    {% for stage in pages.stages %}
 
         {% from "includes/stage-item.njk" import stageItem %}
         {{ stageItem({
