NYC added and a very basic test file added

--- a/templates/pageFlow.njk
+++ b/templates/pageFlow.njk
@@ -1,14 +1,13 @@
 <ol class="page-flow--stages">
 
     {% for stage in pages.stages %}
-
-        {% from "includes/stage-item.njk" import stageItem %}
+        {% from "stage-item.njk" import stageItem %}
         {{ stageItem({
             stage: stage,
             sprint: stage.sprint,
             name: stage.name,
             description: stage.description,
-            pages: stage.pages,
+            pages: stage.pages
         }) }}
 
     {% endfor %}
