--- a/templates/stage-item.njk
+++ b/templates/stage-item.njk
@@ -8,7 +8,7 @@
         {%- if params.stage.versions[0] %}
             <ol class="page-flow--pages">
                 {% for page in params.stage.versions[0].pages %}
-                    {% from "includes/page-item.njk" import pageItem %}
+                    {% from "page-item.njk" import pageItem %}
                     {{ pageItem({
                         page: page,
                         location: params.stage.versions[0].location,
