Test written for getPageInfoForUserFlow

--- a/templates/userFlow.njk
+++ b/templates/userFlow.njk
@@ -95,7 +95,7 @@
                                                target="_blank"
                                                class="page-flow-item-screen-icon page-flow-item-screen-icon--{{ page.pageInfo.type }}"></a>
                                         {% else %}
-                                            <a href="{{ stage['stage'].location + '/' + page.pageInfo.location }}"
+                                            <a href="user-flow/{{ stage['stage'].location + '/' + page.pageInfo.location }}"
                                                target="_blank"
                                                class="page-flow-item-screen-icon page-flow-item-screen-icon--{{ page.pageInfo.type }}"></a>
                                         {% endif %}
