Added journeyId and basic pageNav added to individual page template

--- a/templates/userFlowIndividualPage.njk
+++ b/templates/userFlowIndividualPage.njk
@@ -80,7 +80,7 @@
 
     </div>
     <div class="govuk-grid-column-one-third">
-        {% from "includes/pageNav.html" import pageNav %}
+        {% from "pageNav.njk" import pageNav %}
 
         {{ pageNav(navigation) }}
 
