--- a/templates/components/pageDescription.njk
+++ b/templates/components/pageDescription.njk
@@ -1,5 +1,9 @@
+{% macro iframe(thePageInfo) %}
+
 <h2 class="govuk-heading-m">
     {{ thePageInfo.thisPage.title }}
 </h2>
 
 <p>{{ thePageInfo.thisPage.description }}</p>
+
+{% endmacro %}
