Corrected references to components

--- a/templates/components/pageDescription.njk
+++ b/templates/components/pageDescription.njk
@@ -1,4 +1,4 @@
-{% macro iframe(thePageInfo) %}
+{% macro pageDescription(thePageInfo) %}
 
 <h2 class="govuk-heading-m">
     {{ thePageInfo.thisPage.title }}
