Changed reference to sprintDirectory

--- a/templates/stage-item.njk
+++ b/templates/stage-item.njk
@@ -12,7 +12,7 @@
                     {{ pageItem({
                         page: page,
                         location: params.stage.versions[0].location,
-                        version: params.stage.versions[0].sprintDirectory
+                        version: params.stage.versions[0].versionDirectory
                     }) }}
                 {% endfor %}
             </ol>
