--- a/templates/userFlowIndividualPage.njk
+++ b/templates/userFlowIndividualPage.njk
@@ -18,7 +18,7 @@
     <div class="govuk-grid-column-one-third">
         {% from "componenets/pageNav.njk" import pageNav %}
 
-        {{ pageNav(navigation) }}
+        {{ pageNav(thePageInfo.navigation) }}
 
         {# viewFullPageButton #}
 
