--- a/templates/userFlowIndividualPage.njk
+++ b/templates/userFlowIndividualPage.njk
@@ -3,11 +3,11 @@
         {# breadcrumbs #}
 
         {# pageDescription #}
-        {% from "componenets/pageDescription.njk" import pageDescription %}
+        {% from "components/pageDescription.njk" import pageDescription %}
         {{ pageDescription(thePageInfo) }}
 
         {# iframe #}
-        {% from "componenets/iframe.njk" import iframe %}
+        {% from "components/iframe.njk" import iframe %}
         {{ iframe(thePageInfo) }}
 
         {# User needs #}
@@ -16,7 +16,7 @@
 
     </div>
     <div class="govuk-grid-column-one-third">
-        {% from "componenets/pageNav.njk" import pageNav %}
+        {% from "components/pageNav.njk" import pageNav %}
 
         {{ pageNav(thePageInfo.navigation) }}
 
