--- a/templates/userFlow.njk
+++ b/templates/userFlow.njk
@@ -95,9 +95,9 @@
                                                target="_blank"
                                                class="page-flow-item-screen-icon page-flow-item-screen-icon--{{ page.pageInfo.type }}"></a>
                                         {% else %}
-                                            <a href="user-flow/{{ stage['stage'].location + '/' + page.pageInfo.location }}"
+                                            <a href="{{ userJourney.userType.id }}/{{ stage['stage'].location + '/' + page.pageInfo.location }}"
                                                target="_blank"
-                                               class="page-flow-item-screen-icon page-flow-item-screen-icon--{{ page.pageInfo.type }}"></a>
+                                               class="page-flow-item-screen-icon page-flow-item-screen-icon--{{ page.pageInfo.type }}">123</a>
                                         {% endif %}
                                         <p class="govuk-!-font-size-14">{{ page.pageInfo.title }}
                                         </p>
