--- a/templates/userFlow.njk
+++ b/templates/userFlow.njk
@@ -97,7 +97,7 @@
                                         {% else %}
                                             <a href="{{ userJourney.userType.id }}/{{ stage['stage'].location + '/' + page.pageInfo.location }}"
                                                target="_blank"
-                                               class="page-flow-item-screen-icon page-flow-item-screen-icon--{{ page.pageInfo.type }}">123</a>
+                                               class="page-flow-item-screen-icon page-flow-item-screen-icon--{{ page.pageInfo.type }}"></a>
                                         {% endif %}
                                         <p class="govuk-!-font-size-14">{{ page.pageInfo.title }}
                                         </p>
