--- a/templates/components/viewFullPageButton.njk
+++ b/templates/components/viewFullPageButton.njk
@@ -1,2 +1,6 @@
-<a href="/{{ thePageInfo.location }}" class="hmcts-button--secondary govuk-button govuk-!-display-block"
-   target="_blank">View full page</a>
+{% macro viewFullPageButton(location) %}
+
+    <a href="/{{ location }}" class=""
+       target="_blank">View full page</a>
+
+{% endmacro %}
