--- a/templates/userFlow.njk
+++ b/templates/userFlow.njk
@@ -19,37 +19,37 @@
             <div class="user-flow-page-item">
                 <h3 class="govuk-heading-s" id="{{ userJourney.userType.id }}">{{ userJourney.userType.name }}</h3>
 
-                <details class="govuk-details">
-                    <summary class="govuk-details__summary">
-                        <span class="govuk-details__summary-text">
-                            Design goals and changes
-                        </span>
-                    </summary>
-                    <div class="govuk-details__text">
-                        <p>{{ userJourney.userType.description }}</p>
-                        <h3 class="govuk-heading-s">Changelog</h3>
-                        <ol class="govuk-list govuk-list--number">
-                            {% for change in userJourney.userType.changeLog %}
-                                <li>{{ change }}</li>
-                            {% endfor %}
-                        </ol>
-                        <details class="govuk-details">
-                            <summary class="govuk-details__summary">
-                        <span class="govuk-details__summary-text">
-                            User needs
-                        </span>
-                            </summary>
-                            <div class="govuk-details__text">
-                                <ol class="govuk-list govuk-list--number">
-                                    {% for need in userJourney.needs %}
-                                        <li><strong>{{ need.need }}</strong> {{ need.reason }} - ({{ need.id }})
-                                        </li>
-                                    {% endfor %}
-                                </ol>
-                            </div>
-                        </details>
-                    </div>
-                </details>
+                {#                <details class="govuk-details">#}
+                {#                    <summary class="govuk-details__summary">#}
+                {#                        <span class="govuk-details__summary-text">#}
+                {#                            Design goals and changes#}
+                {#                        </span>#}
+                {#                    </summary>#}
+                {#                    <div class="govuk-details__text">#}
+                {#                        <p>{{ userJourney.userType.description }}</p>#}
+                {#                        <h3 class="govuk-heading-s">Changelog</h3>#}
+                {#                        <ol class="govuk-list govuk-list--number">#}
+                {#                            {% for change in userJourney.userType.changeLog %}#}
+                {#                                <li>{{ change }}</li>#}
+                {#                            {% endfor %}#}
+                {#                        </ol>#}
+                {#                        <details class="govuk-details">#}
+                {#                            <summary class="govuk-details__summary">#}
+                {#                        <span class="govuk-details__summary-text">#}
+                {#                            User needs#}
+                {#                        </span>#}
+                {#                            </summary>#}
+                {#                            <div class="govuk-details__text">#}
+                {#                                <ol class="govuk-list govuk-list--number">#}
+                {#                                    {% for need in userJourney.needs %}#}
+                {#                                        <li><strong>{{ need.need }}</strong> {{ need.reason }} - ({{ need.id }})#}
+                {#                                        </li>#}
+                {#                                    {% endfor %}#}
+                {#                                </ol>#}
+                {#                            </div>#}
+                {#                        </details>#}
+                {#                    </div>#}
+                {#                </details>#}
 
                 <a href="../{{ userJourney.flow[0]['stage'].location + '/' + userJourney.flow[0]['pages'][0].pageInfo.location }}" class="govuk-button">View journey</a>
 
