--- a/templates/userFlowIndividualPage.njk
+++ b/templates/userFlowIndividualPage.njk
@@ -22,7 +22,8 @@
         {% from "components/viewFullPageButton.njk" import viewFullPageButton %}
         {{ viewFullPageButton(thePageInfo.location) }}
 
-        {# pageHistory #}
+        {% from "components/pageHistory.njk" import pageHistory %}
+        {{ pageHistory(thePageInfo) }}
 
         {# videoFeedback #}
 
