Design alternatives feature added... quite basic though, simply launches new tab

--- a/templates/userFlowIndividualPage.njk
+++ b/templates/userFlowIndividualPage.njk
@@ -25,6 +25,9 @@
         {% from "components/pageHistory.njk" import pageHistory %}
         {{ pageHistory(thePageInfo) }}
 
+        {% from "components/pageDesignAlternatives.njk" import pageDesignAlternatives %}
+        {{ pageDesignAlternatives(thePageInfo) }}
+
         {# videoFeedback #}
 
     </div>
